<resources>
    <string name="app_name">Majik</string>
    <string name="app_description">Manage And Track What You Watch</string>
    <string name="streaming_disclaimer_prefix">Majik can NOT</string>
    <string name="streaming_disclaimer_suffix">stream movies or series</string>
    <string name="streaming_confirmation_text">I understand</string>
    <string name="agreement_error_text">You must accept this condition to continue</string>
    <string name="google_continue_text_literal">continue with google</string>
    <string name="guest_continue_text_literal">continue as guest</string>
    <string name="accept_terms_text">By clicking continue, you are agreeing to our\nTerms of Use and Privacy Policy</string>
    <string name="terms_url">https://majik.flycricket.io/terms.html</string>
    <string name="privacy_url">https://majik.flycricket.io/privacy.html</string>
    <string name="ad_mob_application_id_key" translatable="false">com.google.android.gms.ads.APPLICATION_ID</string>
    <string name="ad_test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="options_settings_title">Settings</string>
    <string name="purchases_title">Purchases</string>
    <string name="log_out_title">Log Out</string>
    <string name="settings_key_link">link</string>
    <string name="settings_key_restore">restore</string>
    <string name="settings_key_create_backup">create_backup</string>
    <string name="settings_key_contact">contact</string>
    <string name="settings_key_privacy">privacy</string>
    <string name="settings_key_terms">terms</string>
    <string name="application_shared_prefs_key">application</string>
    <string name="is_pro_mode_key">is_pro_mode</string>
    <string name="contact_email_address">contact@majik.tv</string>
    <string name="settings_link_title">Link Google Account</string>
    <string name="settings_review_title">Review this app</string>
    <string name="settings_contact_developer_title">Contact Developer</string>
    <string name="settings_default_media_title">Default media</string>
    <string name="settings_poster_size_title">Poster quality</string>
    <string name="settings_backdrop_size_title">Backdrop quality</string>
    <string name="settings_auto_sync_title">Automatic sync</string>
    <string name="settings_manual_backup_title">Backup</string>
    <string name="settings_contact_title">Contact Us</string>
    <string name="settings_about_app_title">About App</string>
    <string name="settings_restore_title">Restore Data</string>
    <string name="settings_create_backup_title">Create Backup</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_terms_of_use_title">Terms of Use</string>
    <string name="settings_link_summary">Become a permanent user. Access your data on any device</string>
    <string name="settings_review_summary">This app is developed by a single individual. Please consider leaving a 5 star review if you like the app. It does more than you know and means a whole lot. Thanks!"</string>
    <string name="settings_contact_developer_summary">I would like to know what you think about the app</string>
    <string name="settings_default_media_summary">Change the default media type to be opened on all screens."</string>
    <string name="settings_poster_size_summary">Higher image qualities may use more data, and require longer load times."</string>
    <string name="settings_backdrop_size_summary">Higher image qualities may use more data, and require longer load times."</string>
    <string name="settings_auto_sync_summary">Create automatic backups</string>
    <string name="settings_manual_backup_summary">Create a manual backup</string>
    <string name="settings_contact_summary">We\'d love to hear your feedback</string>
    <string name="settings_about_app_summary">Majik Version 1.0.0</string>
    <string name="settings_restore_summary">Restore files to a previous state</string>
    <string name="settings_create_backup_summary">Create a manual backup of current files</string>
    <string name="poster_description">poster image</string>
    <string name="appwidget_text">!#error#!</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="content_description_backdrop_image">backdrop image</string>
    <string name="content_description_notify_button">notify button</string>
    <string name="content_description_share_button">share button</string>
    <string name="content_description_rate_button">rate button</string>
    <string name="content_description_show_more_button">show more button</string>
    <string name="content_description_media_type_button">media type button</string>
    <string name="content_description_lists_button">lists button</string>
    <string name="content_description_search_button">search button</string>
    <string name="content_description_discover_button">discover button</string>
    <string name="content_description_back_button">back button</string>
    <string name="content_description_options_button">options button</string>
    <string name="content_description_widget_settings_button">widget settings button</string>
    <string name="content_description_add_to_list_button">add to list</string>
    <string name="content_description_create_list_button">create list</string>
    <string name="content_description_person_profile_image">person profile image</string>
    <string name="content_description_purchase_item">purchase item</string>
    <string name="content_description_info_button">info button</string>
    <string name="unlock_notifications_ad">Unlock Notifications and more with Pro</string>
    <string name="rate_dialog_title">Help us out</string>
    <string name="rate_dialog_message">Like the app? Consider leaving a 5 star review. It takes only a second.</string>
    <string name="rate_dialog_ok">Rate Now</string>
    <string name="rate_dialog_cancel">Rate Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="search_text_box_hint">Search</string>
    <string name="name_text_box_hint">Name</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="delete_button_text">Delete</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="media_type_movies_text">Movies</string>
    <string name="media_type_series_text">Series</string>
    <string name="media_type_people_text">People</string>
    <string name="list_type_watch_text">Watch Lists</string>
    <string name="list_type_user_text">User Lists</string>
    <string name="list_type_auto_text">Auto Lists</string>
    <string name="spotlight_heading_text">Spotlight</string>
    <string name="upcoming_episodes">Upcoming Episodes</string>
    <string name="no_release_date">No Release Date</string>
    <string name="fully_released">Fully Released</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="already_released">Already Released</string>
    <string name="lists_text_literal">Lists</string>
    <string name="user_lists_literal">User Lists</string>
    <string name="watch_lists_literal">Watch Lists</string>
    <string name="discover_text_literal">Discover</string>
    <string name="rate_text_literal">Rate</string>
    <string name="detail_trailer_text_title">Trailer</string>
    <string name="detail_notify_text_title">Notify</string>
    <string name="detail_share_text_title">Share</string>
    <string name="detail_rate_text_title">Rate</string>
    <string name="detail_extra_cast_text_literal">Cast</string>
    <string name="detail_extra_recommended_text_literal">Recommended</string>
    <string name="detail_extra_reviews_text_literal">Reviews</string>
    <string name="rate_divider">/</string>
    <string name="rate_default_overall_rating">10</string>
    <string name="detail_overview_tag_show_more" translatable="false">show more</string>
    <string name="detail_overview_tag_show_less" translatable="false">show less</string>
    <string name="department_text_literal">Department</string>
    <string name="date_of_birth_text_literal">Date of Birth</string>
    <string name="watch_status_none_title">None</string>
    <string name="watch_status_to_watch_title">To Watch</string>
    <string name="watch_status_watching_title">Watching</string>
    <string name="watch_status_watched_title">Watched</string>
    <string name="watch_status_dropped_title">Dropped</string>
    <string name="watch_status_other_title">Other</string>
    <string name="spotlight_fetch_error_message">Error loading spotlight</string>
    <string name="discover_results_fetch_error_message">Error loading discover results</string>
    <string name="recommendations_fetch_error_message">Error loading recommendations</string>
    <string name="cast_fetch_error_message">Error loading cast</string>
    <string name="no_created_lists_message">You have\'t created any lists</string>
    <string name="new_list_created_message">New list created</string>
    <string name="list_updated_message">List Configuration Updated</string>
    <string name="details_error_message">Error fetching media details</string>
    <string name="list_already_exists_error_message">A list with that name already exists</string>
    <string name="list_deleted_message">List Deleted</string>
    <string name="list_delete_error_message">Error deleting list</string>
    <string name="list_delete_record_error_message">Error: media has NOT been removed from list</string>
    <string name="rating_disallowed_message">Rating only allowed if item has \"Watching\", \"Watched\" or \"Dropped\" watch status.</string>
    <string name="confirmation_error_message">An error occurred in confirmation</string>
    <string name="checking_for_backups_message">Checking For Backups.</string>
    <string name="backups_found_message">Backups Found</string>
    <string name="backup_completed_message">Backup Completed.</string>
    <string name="backup_failure_message">Backup Failed.</string>
    <string name="restore_completed_message">Restore Completed.</string>
    <string name="restore_failed_message">Restore Failed.</string>
    <string name="no_browser_error_message">No browser to launch page</string>
    <string name="log_in_failed_message">Log In Failed</string>
    <string name="pro_mode_list_limit_message">More lists available in pro mode.</string>
    <string name="upcoming_episodes_info">Displays new episodes from \"Watching\" list</string>
    <string name="ended_episodes_info">Displays past episodes from \"Watching\" list</string>
    <string name="upcoming_movies_info">Displays new movies from \"To Watch\" and \"Watching\" list</string>
    <string name="ended_movies_info">Displays past movies from \"To Watch\" and \"Watching\" list</string>
    <string name="to_watch_status_info">For first released notifications</string>
    <string name="watching_status_info">For first released and episodic notifications</string>
    <string name="restore_confirmation_message">This will overwrite all your current data.\nAre you sure?</string>
    <string name="create_backup_confirmation_message">Create a manual backup?</string>
    <string name="delete_confirmation_message">Are you sure you want to delete?</string>
    <string name="log_out_confirmation_message">Failed To Backup Data. Are You Sure You Want To Log Out?</string>
    <string name="pending_purchase_confirmation_message">Your purchase is processing, we\'ll let you know when its done.</string>
    <string name="guest_log_out_confirmation_message">Warning!\n\n Guest data is deleted after log out.(Except Purchases)\n\nLink Account In Settings to Keep Account\n\nTap yes 3 times to log out.</string>
    <string name="release_date_placeholder">TBD</string>
    <string name="date_of_birth_placeholder">unavailable</string>
</resources>