<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="@string/settings_about_app_title"
        android:summary="@string/settings_about_app_summary"
        android:key="@string/settings_key_about_app"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_logo"/>

    <Preference
        android:title="@string/settings_link_title"
        android:summary="@string/settings_link_summary"
        android:key="@string/settings_key_link"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

    <Preference
        android:title="@string/settings_restore_title"
        android:summary="@string/settings_restore_summary"
        android:key="@string/settings_key_restore"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

    <Preference
        android:title="@string/settings_create_backup_title"
        android:summary="@string/settings_create_backup_summary"
        android:key="@string/settings_key_create_backup"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

    <Preference
        android:title="The Movie Database"
        android:summary="This product uses the TMDb API but is not endorsed or certified by TMDb."
        android:icon="@drawable/ic_tmdb_logo"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

    <Preference
        android:title="@string/settings_support_title"
        android:key="@string/settings_key_support"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

    <Preference
        android:title="@string/settings_privacy_policy_title"
        android:key="@string/settings_key_privacy"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

    <Preference
        android:title="@string/settings_terms_of_use_title"
        android:key="@string/settings_key_terms"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

</PreferenceScreen>