<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LaunchActivity">

    <TextView
        android:id="@+id/logo_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x3_layout_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="@dimen/headline_4_text_size"/>

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x3_layout_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin" android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_text_view"
        android:text="@string/app_description"
        android:textColor="@android:color/white"
        android:textSize="@dimen/headline_2_text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/description_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/google_continue"
        android:gravity="center">

        <TextView
            android:id="@+id/no_streaming_prefix_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/x1_layout_margin"
            android:gravity="center"
            android:text="@string/streaming_disclaimer_prefix"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headline_3_text_size"/>

        <TextView
            android:id="@+id/no_streaming_suffix_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/x1_layout_margin"
            android:gravity="center"
            android:text="@string/streaming_disclaimer_suffix"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headline_2_text_size"/>

        <LinearLayout
            android:id="@+id/i_understand_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x1_layout_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/i_understand_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x1_layout_margin"
                android:paddingBottom="@dimen/x1_layout_margin"
                android:text="@string/streaming_confirmation_text"
                android:textSize="@dimen/body_text_size" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/i_understand_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x1_layout_margin" />

        </LinearLayout>

        <TextView
            android:id="@+id/agreement_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x5_layout_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/button_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/agreement_error_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/subtitle_text_size"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>

    <Button
        android:id="@+id/google_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x1_layout_margin"
        app:layout_constraintBottom_toTopOf="@id/guest_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/google_continue_text_literal"/>

    <Button
        android:id="@+id/guest_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x1_layout_margin"
        app:layout_constraintBottom_toTopOf="@id/terms_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/guest_continue_text_literal"/>

    <TextView
        android:id="@+id/terms_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x3_layout_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/accept_terms_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/subtitle_text_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>