<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backdrop_image_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:contentDescription="@string/content_description_backdrop_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/notify_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_notify_black"
                android:background="@color/colorAccent"
                android:contentDescription="@string/content_description_notify_button"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_share_black"
                android:background="@color/colorAccent"
                android:contentDescription="@string/content_description_share_button"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/x1_layout_margin"
        android:paddingBottom="@dimen/x1_layout_margin"
        android:background="@color/background">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center"
            tools:text="Alita Battle Angel"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/rate_button"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/ic_rate"
            android:contentDescription="@string/content_description_rate_button"/>

    </LinearLayout>

</LinearLayout>
