<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background_fragment_overlay"
    tools:context=".RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/x2_layout_margin">

        <TextView
            android:id="@+id/rate_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            tools:text="5"
            android:textSize="@dimen/headline_36_text_size"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rate_divider"
            android:textSize="@dimen/headline_48_text_size"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/rate_default_overall_rating"
            android:textSize="@dimen/headline_36_text_size"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <SeekBar
        android:id="@+id/rating_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x2_layout_margin"
        android:layout_marginLeft="@dimen/x2_layout_margin"
        android:layout_marginRight="@dimen/x2_layout_margin"
        android:layout_marginBottom="@dimen/x3_layout_margin"
        android:layout_marginEnd="@dimen/x2_layout_margin"
        android:layout_marginStart="@dimen/x2_layout_margin" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/x2_layout_margin"
        android:layout_marginEnd="@dimen/x2_layout_margin"
        android:layout_marginBottom="@dimen/x2_layout_margin"
        android:background="@null"
        android:gravity="end"
        android:layout_gravity="end"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/save_button_text"
        android:textColor="@android:color/white" />

</LinearLayout>