<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/x1_layout_margin"
    android:paddingStart="@dimen/text_margin"
    android:paddingLeft="@dimen/text_margin"
    android:paddingEnd="@dimen/text_margin"
    android:paddingRight="@dimen/text_margin"
    android:background="@color/background"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/profile_image_view"
        android:src="@drawable/backdrop"
        android:layout_width="@dimen/person_profile_image_dimen"
        android:layout_height="@dimen/person_profile_image_dimen"
        android:layout_marginTop="@dimen/x5_layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description_person_profile_image"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/profile_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/profile_image_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x2_layout_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headline_1_text_size"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profession_text_view"
            android:text="@string/department_text_literal" />

        <TextView
            android:id="@+id/profession_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x2_layout_margin"
            android:textSize="@dimen/subtitle_text_size"
            android:textColor="@color/color_subtext"
            app:layout_constraintBottom_toTopOf="@id/date_of_birth"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Actor/Director" />

        <TextView
            android:id="@+id/date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x2_layout_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headline_1_text_size"
            app:layout_constraintBottom_toTopOf="@id/date_of_birth_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/date_of_birth_text_literal" />

        <TextView
            android:id="@+id/date_of_birth_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subtitle_text_size"
            android:textColor="@color/color_subtext"
            app:layout_constraintBottom_toBottomOf="@id/profile_image_view"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="04/02/1975" />

    </LinearLayout>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x2_layout_margin"
        android:layout_marginEnd="@dimen/x2_layout_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/headline_2_text_size"
        app:layout_constraintEnd_toStartOf="@id/profile_image_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_view"
        tools:text="Alita Battle Angel" />

    <!--______________________________________________-->

    <TextView
        android:id="@+id/overView_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x4_layout_margin"
        android:paddingBottom="@dimen/x1_layout_margin"
        tools:text="Light years from Earth, 26 years after being abducted, Peter Quill finds himself the prime target of a manhunt after discovering an orb wanted by Ronan the Accuser."
        android:textSize="@dimen/body_text_size"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text_view" />

    <ImageButton
        android:id="@+id/show_more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x1_layout_margin"
        android:padding="@dimen/x2_layout_margin"
        android:foreground="@drawable/ripple_pressed"
        android:background="@null"
        android:tag="@string/detail_overview_tag_show_less"
        android:src="@drawable/ic_show_more"
        app:layout_constraintTop_toBottomOf="@+id/overView_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/content_description_show_more_button"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>